# spar-services

./: LICENSE  README.md  docker-compose.dev.yml
backend/: .dockerignore  .env  .env.local.example  .env.staging.example  .gitignore  Dockerfile  README.md  asgi.py  gunicorn_conf.py  pyproject.toml
backend/app/: .gptignore  main.py
backend/app/api/: __init__.py
backend/app/api/admin/: __init__.py
backend/app/api/auth/: config.py  constants.py  controller.py  dependencies.py  exceptions.py  models.py  router.py  service.py
backend/app/api/health/: models.py  router.py  service.py
backend/app/api/llms/: config.py  constants.py  controller.py  exceptions.py  util.py
backend/app/api/spar/: __init__.py  models_linking.py
backend/app/av_service/: constants.py  controller.py  exceptions.py  ffmpeg_process.py
backend/app/aws/: config.py  constants.py  controller.py  exceptions.py  s3client.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  exceptions.py  logger.py  openapi_config.py  ratelimiter.py  redis.py  schemas.py  util.py
backend/app/core/models/: base_sql_model.py
backend/app/dummy/: mock_db_data.py
backend/app/external_services/: assemblyAI_client.py  azure_stt_client.py  config.py  constants.py  deepgram_client.py  exceptions.py  tts_client.py
backend/app/infra/: config.py  constants.py  exceptions.py  service.py
backend/app/infra/processes/: acquire_instance.py  acquire_instance_paramiko.py  deploy_ue.py  llm_start.py  llm_stop.py  terminate_instance.py  ue_app_start.py  (+5 more)
backend/migrations/: env.py
backend/migrations/versions/: 2025_02_21_1122-b8e99b3729b4_initial_migration.py
(+333 files in other folders)
